--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ header {
   padding: 20px;
 }
 
+.backArrow{
+  color: white;
+  padding: 0 0.5rem 0 0.5rem;
+}
+
 .movie-list {
   display: grid;
   grid-template-columns: auto;
