--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header {
   padding: 20px;
 }
 
-.backArrow{
+.backArrow {
   color: white;
   padding: 0 0.5rem 0 0.5rem;
 }
@@ -40,7 +40,19 @@ a {
 }
 
 .movie-details {
-  padding-left: 10px;
+  text-align: center;
+}
+
+#player {
+  box-shadow: grey 5px 5px 10px;
+  margin: 1rem 0;
+  min-width: 280px;
+  max-width: 640px;
+}
+
+.movie-details-description {
+  box-shadow: grey 5px 5px 10px;
+  padding: 0.5rem;
 }
 
 @media (min-width: 320px) {
@@ -52,10 +64,16 @@ a {
   .movie-image {
     max-width: 100%;
   }
+  #player {
+    min-height: 240px;
+  }
 }
 
 @media (min-width: 480px) {
   /* smartphones, Android phones, landscape iPhone */
+  #player {
+    min-height: 390px;
+  }
 }
 @media (min-width: 600px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
