--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ a {
   position: absolute;
   padding: 15px 40px;
   margin-top: 600px;
+  margin-left: 25vw;
   box-shadow: grey 5px 5px 10px;
 }
 .movie-button:hover {
@@ -80,7 +81,7 @@ a {
   .movie-image {
     float: left;
     width: 100%;
-    height: 400px;
+    height: 600px;
     object-fit: cover;
   }
 
@@ -107,6 +108,7 @@ a {
 
   .movie-button {
     margin-top: 500px;
+    margin-left: 15vw;
   }
 }
 @media (min-width: 801px) {
